[package]
name = "http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "http"
path = "src/http.rs"

[dependencies]
async-std = { version = "1.10", optional = true } 

[features]
build-async-std = ["async-std"]

[[bin]]
name = "async-std-server"
required-features = ["build-async-std"]
path = "./src/async-std-server/main.rs"
